<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00003b"
    tools:context=".StudentLogin">

<Space
android:layout_width="match_parent"
android:layout_height="58dp" />

    <TextView
        android:id="@+id/TeacherLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:fontFamily="@font/startrek"
        android:text="@string/teacher_login"
        android:textColor="#03A9F4"
        android:textSize="40sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <EditText
        android:id="@+id/TeacherID"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:autofillHints="     Teacher ID"
        android:backgroundTint="#2196F3"
        android:drawableStart="@drawable/ic_baseline_account_box_24"
        android:ems="10"
        android:fontFamily="@font/gotham"
        android:hint="@string/teacher_id"
        android:includeFontPadding="true"
        android:inputType="textPersonName"
        android:lineSpacingExtra="34sp"
        android:textColor="#2196F3"
        android:textColorHint="#00BCD4"
        android:textSize="30sp" />

<Space
android:layout_width="match_parent"
android:layout_height="10dp" />

    <EditText
        android:id="@+id/TeacherPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:autofillHints="Password"
        android:backgroundTint="#2196F3"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:fontFamily="@font/gotham"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:labelFor="@id/TeacherPassword"
        android:textColor="#2196F3"
        android:textColorHint="#00BCD4"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/attemptspwd"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:gravity="center"
        android:textAlignment="gravity"
        android:textColor="#F60404" />
<Space
android:layout_width="match_parent"
android:layout_height="21dp" />

<androidx.cardview.widget.CardView
android:id="@+id/loginCard"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center_vertical|center_horizontal"
app:cardBackgroundColor="#2196F3"
app:cardCornerRadius="25dp">

<Button
    android:id="@+id/teacher"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:backgroundTint="#2196F3"
    android:fontFamily="@font/startrek"
    android:text="@string/login"
    android:textSize="30sp" />
</androidx.cardview.widget.CardView>


    </LinearLayout>