<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#00003b">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="58dp" />

        <ImageView
            android:id="@+id/collegeLogo"
            android:layout_width="match_parent"
            android:layout_height="303dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/collegelogo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="75dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/loginCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            app:cardBackgroundColor="#2196F3"
            app:cardCornerRadius="25dp">

            <Button
                android:id="@+id/student"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:backgroundTint="#2196F3"
                android:fontFamily="@font/startrek"
                android:text="@string/student"
                android:textSize="40sp" />
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            app:cardBackgroundColor="#2196F3"
            app:cardCornerRadius="25dp">

            <Button
                android:id="@+id/teacher"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:backgroundTint="#2196F3"
                android:fontFamily="@font/startrek"
                android:text="@string/teacher"
                android:textSize="40sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>