<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00003b"
    tools:context=".StudentLogin">

    <Space
        android:layout_width="match_parent"
        android:layout_height="58dp" />

    <TextView
        android:id="@+id/StudentLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="Student Login"
        android:fontFamily="@font/startrek"
        android:textColor="#03A9F4"
        android:textSize="40sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <EditText
        android:id="@+id/RegNO"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:autofillHints="  Register number"
        android:backgroundTint="#2196F3"
        android:drawableLeft="@drawable/ic_baseline_account_box_24"
        android:ems="10"
        android:fontFamily="@font/gotham"
        android:hint="@string/REGISTERNUMBER"
        android:includeFontPadding="true"
        android:inputType="textPersonName"
        android:lineSpacingExtra="34sp"
        android:textColor="#2196F3"
        android:textColorHint="#00BCD4"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/StudentPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:autofillHints="Password"
        android:backgroundTint="#2196F3"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:fontFamily="@font/gotham"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:labelFor="@id/StudentPassword"
        android:textColor="#2196F3"
        android:textColorHint="#00BCD4"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/attemptspwd"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text=" "
        android:textAlignment="gravity"
        android:textColor="#F44336"
        android:visibility="invisible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="21dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        app:cardBackgroundColor="#2196F3"
        app:cardCornerRadius="25dp">

        <Button
            android:id="@+id/student"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/startrek"
            android:backgroundTint="#2196F3"
            android:text="@string/login"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>


</LinearLayout>